src/App.css
@keyframes success {
  0% {
    border-color: #21b36f;
  }
  100% {
    border-color: #0e0e0e;
  }
}

@keyframes failure {
  0% {
    border-color: #d43622;
  }
  100% {
    border-color: #0e0e0e;
  }
}

* {
  box-sizing: border-box;
}

html, body {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#root {
  width: 100vw;
}

.background {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100wv;
  background-size: cover;
  background-color: #0e0e0e;
  transition: background-image 1s linear;
}

.Card {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 3rem;
  background-color: #f2f2f2;
  color: #0e0e0e;
  border-radius: 1rem;
  border: 10px solid #0e0e0e;
  width: 500px;
}

.correctAnswer {
  animation: success 1.5s;
}

.incorrectAnswer {
  animation: failure 1.5s;
}

.Hiragana {
  font-size: 10rem;
}

.input {
  outline: none;
  border: none;
  border-bottom: 2px solid #0e0e0e;
  background-color: transparent;
  color: #0e0e0e;
  font-size: 2rem;
  font-family: sans-serif;
  text-align: center;
}

.Score {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 1rem;
  left: 1rem;
  background-color: #0e0e0e;
  color: #f2f2f2;
  padding: 1rem;
  border-radius: 1rem;
}

.SelectWritingSystemBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 1rem;
  right: 1rem;
  background-color: #0e0e0e;
  color: #f2f2f2;
  padding: 1rem;
  border-radius: 1rem;
}

.SelectWritingSystemBtn h2 {
  margin: 0;
  padding: 0;
}

.Percentage {
  margin: 0;
  padding: 0;
}

.Answer {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.AnswerBtn {
  font-size: 2rem;
  padding: 1rem;
  width: 6rem;
  border: 1px solid #0e0e0e;
  border-radius: 2px;
}

@media only screen and (max-width : 480px) {
  .Card {
    padding: 1rem;
    width: 100%;
  }
  .Hiragana {
    font-size: 8rem;
  }
  .input {
    font-size: 1.6rem;
  }
}

